tests/snapshots/output_snapshots__snapshot_error_fallback.snap
---
source: tests/output_snapshots.rs
assertion_line: 217
expression: format_error(&err)
---
ServerError: table foo does not exist
