tests/snapshots/output_snapshots__snapshot_error_invalid_request.snap
---
source: tests/output_snapshots.rs
assertion_line: 199
expression: format_error(&err)
---
InvalidRequest: unconfigured table no_such_table
