tests/snapshots/output_snapshots__snapshot_error_syntax_exception.snap
---
source: tests/output_snapshots.rs
assertion_line: 187
expression: format_error(&err)
---
SyntaxException: line 1:0 no viable alternative at input 'SELEC'
