tests/snapshots/output_snapshots__snapshot_error_unauthorized.snap
---
source: tests/output_snapshots.rs
assertion_line: 211
expression: format_error(&err)
---
Unauthorized: User anonymous has no SELECT permission on table system.users
