tests/snapshots/output_snapshots__snapshot_help_topic_unknown.snap
---
source: tests/output_snapshots.rs
assertion_line: 242
expression: "String::from_utf8(buf).unwrap()"
---
No help topic matching 'FOOBAR'. Try HELP for a list of topics.
