tests/snapshots/output_snapshots__snapshot_json_5_rows.snap
---
source: tests/output_snapshots.rs
assertion_line: 165
expression: capture_json(&result)
---
[
  {"id": 1, "name": "User1"},
  {"id": 2, "name": "User2"},
  {"id": 3, "name": "User3"},
  {"id": 4, "name": "User4"},
  {"id": 5, "name": "User5"}
]
