tests/snapshots/output_snapshots__snapshot_tabular_10_rows_mixed_types.snap
---
source: tests/output_snapshots.rs
assertion_line: 133
expression: capture_tabular(&result)
---

 id | label    | score | active | token                                | note    
----+----------+-------+--------+--------------------------------------+---------
  1 | label-1  |   1.5 | False  | 00000000-0000-0000-0000-000000000000 | note-1  
  2 | label-2  |     3 | True   | 00000000-0000-0000-0000-000000000000 | note-2  
  3 | label-3  |   4.5 | False  | 00000000-0000-0000-0000-000000000000 | null    
  4 | label-4  |     6 | True   | 00000000-0000-0000-0000-000000000000 | note-4  
  5 | label-5  |   7.5 | False  | 00000000-0000-0000-0000-000000000000 | note-5  
  6 | label-6  |     9 | True   | 00000000-0000-0000-0000-000000000000 | null    
  7 | label-7  |  10.5 | False  | 00000000-0000-0000-0000-000000000000 | note-7  
  8 | label-8  |    12 | True   | 00000000-0000-0000-0000-000000000000 | note-8  
  9 | label-9  |  13.5 | False  | 00000000-0000-0000-0000-000000000000 | null    
 10 | label-10 |    15 | True   | 00000000-0000-0000-0000-000000000000 | note-10 

(10 rows)
